--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,27 +1,90 @@
 ---
-title: "Manuscript Title"
+title: "Capturing through-bond non-local effects in torsion parameters using fractional bond orders"
 keywords:
-  - markdown
-  - publishing
-  - manubot
+  - forcefield
+  - force-field
+  - cheminformatics
 lang: en-US
-authors:
+author_info:
   -
-    github: johndoe
-    name: John Doe
-    initials: JD
-    orcid: XXXX-XXXX-XXXX-XXXX
-    twitter: johndoe
+    github: ChayaSt
+    name: Chaya D Stern
+    initials: CDS
+    orcid: 0000-0001-6200-3993
+    twitter: SternChaya
+    email: chaya.stern@choderalab.org
+    affiliations:
+      - Tri-Insitutional PhD Program in Chemical Biology, Memorial Sloan Kettering Cancer Center, New York, New York 10065, USA
+      - Computational and Systems Biology Program, Memorial Sloan Kettering Cancer Center, New York, New York 10065 USA
+    funders:
+      - NSF GRFP DGE-1257284
+      - MolSSI NSF ACI-1547580
+      - NSF CHE-1738979 # Bayesian force field grant
+  -
+    github: cbayly13
+    name: Christopher I Bayly
+    initials: CIB
+    orcid: 0000-0001-9145-6457
+    email: bayly@eyesopen.com
+    affiliations:
+      - OpenEye Scientific Software
+  -
+    github: dgasmith
+    name: Daniel G A Smith
+    initials: DGAS
+    orcid: 0000-0001-8626-0900
+    twitter: dga_smith
+    email: dgasmith@icloud.com
+    affiliations:
+      - The Molecular Sciences Software Institute, Blacksburg, Virginia 24060 USA
+    funders:
+      - NSF OAC-1547580 # MolSSI
+      - Open Force Field Consortium
+  -
+    github: maxentile
+    name: Josh Fass
+    initials: JF
+    orcid: 0000-0003-3719-266X
+    twitter: maxentile
+    email: josh.fass@choderalab.org
+    affiliations:
+      - Tri-Insitutional PhD Program in Chemical Biology, Memorial Sloan Kettering Cancer Center, New York, New York 10065, USA
+      - Computational and Systems Biology Program, Memorial Sloan Kettering Cancer Center, New York, New York 10065 USA
+    funders:
+      - NSF CHE-1738979
+  -
+    github: leeping
+    name: Lee-Ping Wang
+    initials: LPW
+    orcid: 0000-0003-3072-9946
+    #twitter: null
+    email: leeping@ucdavis.edu
+    affiliations:
+      - Department of Chemistry, University of California, Davis, Califnornia 95616 USA
+    #funders: null
+  -
+    github: davidlmobley
+    name: David L Mobley
+    initials: DLM
+    orcid: 0000-0002-1083-5533
+    twitter: davidmobley
     email: john.doe@something.com
     affiliations:
-      - Department of Something, University of Whatever
-    funders: Grant XXXXXXXX
+      - Departments of Pharmaceutical Sciences and Chemistry, University of California, Irvine, California 92697
+    funders:
+      - NIH R01GM132386 # Open Force Field Initiative
   -
-    github: janeroe
-    name: Jane Roe
-    initials: JR
-    orcid: XXXX-XXXX-XXXX-XXXX
-    email: jane.roe@whatever.edu
+    github: jchodera
+    name: John D Chodera
+    initials: JDC
+    orcid: 0000-0003-0542-119X
+    twitter: jchodera
+    email: john.chodera@choderalab.org
     affiliations:
-      - Department of Something, University of Whatever
-      - Department of Whatever, University of Something
+      - Computational and Systems Biology Program, Memorial Sloan Kettering Cancer Center, New York, New York 10065 USA
+      - BIH Einstein Visiting Professor, Charité Universitätsmedizin, Berlin
+    funders:
+      - NSF CHE-1738979 # NSF Bayesian inference
+      - NIH R01GM132386 # Open Force Field Initiative
+      - NIH P30CA008748 # MSKCC cancer center grant
+      - Sloan Kettering Institute
